--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 8rem 12rem;
-  height: 100vh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -15,16 +14,30 @@ body {
   flex: 1;
   padding: 3rem 4rem;
   position: relative;
-  min-height: 0;
 }
 
 .content p {
   color: #000000;
 }
 
-.content h {
+.content h1 {
   color: #000000;
   font-size: xx-large;
+}
+
+.content h2 {
+  color: #000000;
+  font-size: x-large;
+}
+
+.content h3 {
+  color: #000000;
+  font-size: larger;
+}
+
+.content h4 {
+  color: #000000;
+  font-size: large;
 }
 
 .content a {
@@ -153,7 +166,19 @@ body {
     color: #ffffff;
   }
 
-  .content h {
+  .content h1 {
+    color: #ffffff;
+  }
+
+  .content h2 {
+    color: #ffffff;
+  }
+
+  .content h3 {
+    color: #ffffff;
+  }
+
+  .content h4 {
     color: #ffffff;
   }
 
