Added all currently indexed pages, partially with placeholder texts

--- a/partials/menu.partial.html
+++ b/partials/menu.partial.html
@@ -6,11 +6,11 @@
 <nav class="side-menu" id="sideMenu">
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="#">Geschäftliches</a></li>
-    <li><a href="#">Persönliches</a></li>
-    <li><a href="#">Lebenslauf</a></li>
+    <li><a href="/business/">Geschäftliches</a></li>
+    <li><a href="/personal/">Persönliches</a></li>
+    <li><a href="/cv/">Lebenslauf</a></li>
     <li><a href="/theses/">Abschlussarbeiten</a></li>
-    <li><a href="#">Spielereien</a></li>
+    <li><a href="/gimmicks/">Spielereien</a></li>
     <li><a href="/links/">Externe Links</a></li>
   </ul>
 </nav>
