--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,50 @@ body {
   transition: opacity 0.3s;
 }
 
+.cv {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5em;
+  font-family: inherit;
+  color: inherit;
+}
+
+.cv .element {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.cv .year {
+  min-width: 80px;
+  text-align: right;
+  padding-right: 1.5rem;
+}
+
+.cv .info {
+  flex: 1;
+}
+
+.cv .title {
+  font-weight: bold;
+}
+
+.cv .location {
+  font-weight: 300;
+  position: relative;
+}
+
+.cv .location::after {
+  content: "📍";
+  padding-left: 0.25em;
+}
+
+.cv .desc {
+  font-weight: normal;
+}
+
+
+
 @media (prefers-color-scheme: light) {
   .logo-light {
     display: inline;
@@ -182,23 +226,23 @@ body {
   }
 
   .content p {
-    color: #ffffff;
+    color: white;
   }
 
   .content h1 {
-    color: #ffffff;
+    color: white;
   }
 
   .content h2 {
-    color: #ffffff;
+    color: white;
   }
 
   .content h3 {
-    color: #ffffff;
+    color: white;
   }
 
   .content h4 {
-    color: #ffffff;
+    color: white;
   }
 
   .footer-links a {
@@ -239,5 +283,9 @@ body {
 
   .logo-dark {
     display: inline;
+  }
+
+  .cv {
+    color: white;
   }
 }
