--- a/partials/menu.partial.html
+++ b/partials/menu.partial.html
@@ -5,7 +5,7 @@
 </div>
 <nav class="side-menu" id="sideMenu">
   <ul>
-    <li><a href="/">Home</a></li>
+    <li><a href="/home/">Home</a></li>
     <li><a href="/business/">Geschäftliches</a></li>
     <li><a href="/personal/">Persönliches</a></li>
     <li><a href="/cv/">Lebenslauf</a></li>
