--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,20 @@ body {
   text-decoration: none;
 }
 
+.lang-switch {
+  position: absolute; 
+  top: -4rem; 
+  right: 2.5rem;
+  font-family: inherit;
+  color: #404040;
+}
+
+.lang-switch a {
+  color: inherit;
+  font-size: 16px;
+  text-decoration: none;
+}
+
 .menu-button {
   position: absolute;
   top: 2rem;
@@ -246,6 +260,10 @@ body {
   }
 
   .footer-links a {
+    color: #dddddd;
+  }
+
+  .lang-switch {
     color: #dddddd;
   }
 
