--- a/partials/footer.partial.html
+++ b/partials/footer.partial.html
@@ -1,4 +1,4 @@
 <div class="footer-links">
-    <a href="/legal/impressum/">Impressum</a>
-    <a href="/contact/">Kontakt</a>
+    <a href="/legal/impressum/" id="imprint"></a>
+    <a href="/contact/" id="contact"></a>
 </div>
