--- a/partials/menu.partial.html
+++ b/partials/menu.partial.html
@@ -5,12 +5,12 @@
 </div>
 <nav class="side-menu" id="sideMenu">
   <ul>
-    <li><a href="/home/">Home</a></li>
-    <li><a href="/business/">Geschäftliches</a></li>
-    <li><a href="/personal/">Persönliches</a></li>
-    <li><a href="/cv/">Lebenslauf</a></li>
-    <li><a href="/theses/">Abschlussarbeiten</a></li>
-    <li><a href="/gimmicks/">Spielereien</a></li>
-    <li><a href="/links/">Externe Links</a></li>
+    <li><a href="/home/" id="home"></a></li>
+    <li><a href="/business/" id="business"></a></li>
+    <li><a href="/personal/" id="personal"></a></li>
+    <li><a href="/cv/" id="cv"></a></li>
+    <li><a href="/theses/" id="theses"></a></li>
+    <li><a href="/gadgets/" id="gadgets"></a></li>
+    <li><a href="/links/" id="links"></a></li>
   </ul>
 </nav>
